# bot-template

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: lint.yml
.sqlx/: query-1a7f0064cfc13b985c9a97bf92c9936cb79d5931c9634b3c1be51fdb8928c906.json  query-ed292b3f56069c6ba0ded97f885596543182587fdb3f7ed94fd944b9a55af97b.json
bot/: Cargo.toml
bot/src/: main.rs  utils.rs
bot/src/commands/: common.rs  introduction.rs  mod.rs
db/: Cargo.toml
db/src/: introduce.rs  lib.rs
migrations/: 20240123110327_test.sql
